[package]
name = "delegated-mpsi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpc-bench = "=0.8.1"
blake3 = "1.3"
sets_multisets = { version = "0.7.1", features = ["blake3"], default-features = false }
rand = "0.8"
bincode = "1.3"
structopt = "0.3"
